Significant upgrade to leverage the latest master-parent. This includes the Micronaut upgrade, the Java 17 upgrade, and the replacement of javax.inject.